# k3s-dev

./: .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  pyproject.toml  tasks.py
docs/: architecture.md  architecture.mmd  demo.tape  medium-post.md  walkthrough.tape
k3s_dev/: BUILD.bazel  __init__.py  checks.py  cli.py  kubectl.py  launch_agent.py  namespace.py  postgres.py  project.py  sealed_secrets.py  state.py
tests/: test_imports.py
