[project]
name = "k3s-dev"
version = "0.1.0"
description = "Local k3s dev environment bootstrapper for macOS"
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "keyring>=25",
]

[project.scripts]
k3s-dev = "k3s_dev.cli:app"

[dependency-groups]
dev = [
    "invoke>=2",
    "pytest>=8",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
