load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")

py_library(
    name = "lib",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("typer"),
        requirement("rich"),
        requirement("httpx"),
        requirement("keyring"),
    ],
)
